--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
         <json-path.version>2.9.0</json-path.version>
         <jsoup.version>1.17.2</jsoup.version>
         <lombok.version>1.18.30</lombok.version>
-        <mysql-connector-j.version>8.3.0</mysql-connector-j.version>
         <okhttp.version>4.12.0</okhttp.version>
+        <postgresql.version>42.7.2</postgresql.version>
     </properties>
 
     <dependencies>
@@ -45,9 +45,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>${mysql-connector-j.version}</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
         </dependency>
 
         <dependency>
